Dockerizzato il dockerizzabile.